src/test/ui/rfc-2627-raw-dylib/link-ordinal-too-many-arguments.stderr
error: incorrect number of arguments to `#[link_ordinal]`
  --> $DIR/link-ordinal-too-many-arguments.rs:5:5
   |
LL |     #[link_ordinal(3, 4)]
   |     ^^^^^^^^^^^^^^^^^^^^^
   |
   = note: the attribute requires exactly one argument

error: incorrect number of arguments to `#[link_ordinal]`
  --> $DIR/link-ordinal-too-many-arguments.rs:8:5
   |
LL |     #[link_ordinal(3, 4)]
   |     ^^^^^^^^^^^^^^^^^^^^^
   |
   = note: the attribute requires exactly one argument

error: aborting due to 2 previous errors

